# remote-settings

./: .autograph.yml  .coveragerc  .dockerignore  .flake8  .gitignore  .pyup.yml  .readthedocs.yaml  .secrets.baseline  .travis.yml  BrowserTests.Dockerfile  CHANGELOG.rst  Cronjobs.Dockerfile  Dockerfile  Dockerfile.Testing  Dockerfile.Testing.dockerignore  IntegrationTests.Dockerfile  Known-Instances.yml  MANIFEST.in  Makefile  README.md  README.rst  Release.Dockerfile  RemoteSettings.Dockerfile  RemoteSettings.dockerignore  SECURITY.md  Testing.Dockerfile  Testing.Dockerfile.dockerignore  VERSION  _typos.toml  amo-blocklist.yaml  app.wsgi  bors.toml  circle.yml  create_groups.py  dev-requirements.txt  docker-compose.ci.yml  docker-compose.override.yml  docker-compose.yml  nginx.conf  pyproject.toml  (+9 more)
.circleci/: config.yml
.github/: CODEOWNERS  dependabot.yml  release.yml
.github/workflows/: ci.yaml  ingestion-job-publish.yaml  publish-ent.yaml  publish.yaml  scheduled.yaml  test.yaml
architecture/: docker-compose.yml  script.groovy  workspace.dsl  workspace.json
autograph/: Dockerfile  autograph.yaml  version.json
blocked/: blocklists.xml
browser-tests/: .dockerignore  Dockerfile  README.md  conftest.py  pyproject.toml  run.sh  test_endpoints.py  test_review.py  utils.py
browser-tests/plugins/: test_attachment.py  test_changes.py  test_email.py  test_history.py  test_signer.py  test_slack.py
config/: example.ini  kinto.ini  ldap.conf  local.ini  nginx.conf  testing.ini
cronjobs/: .dockerignore  Dockerfile  README.md  aws_lambda.py  pyproject.toml  requirements.in  requirements.txt
cronjobs/commands/: __init__.py  backport_records.py  build_bundles.py  sync_megaphone.py
cronjobs/src/: main.py
cronjobs/src/commands/: __init__.py  _git_export_git_tools.py  _git_export_lfs.py  backport_records.py  build_bundles.py  build_compression_dictionaries.py  consumption_movers.py  expire_orphan_attachments.py  git_export.py  purge_history.py  purge_old_attachments.py  refresh_signature.py  sync_megaphone.py
cronjobs/tests/: test_main.py
cronjobs/tests/commands/: conftest.py  test_backport_records.py  test_build_bundles.py  test_build_compression_dictionaries.py  test_commands.py  test_consumption_movers.py  test_expire_orphan_attachments.py  test_git_export.py  test_git_export_git_lfs.py  test_git_export_git_tools.py  test_purge_history.py  test_purge_old_attachments.py  test_refresh_signature.py  test_sync_megaphone.py
docs/: Makefile  README.md  case-studies.rst  client-specifications.rst  conf.py  deployment.rst  frequently-asked-questions.rst  getting-started.rst  index.rst  introduction.rst  monitoring.rst  requirements.txt  screencasts.rst  support.rst  target-filters.rst  tutorial-attachments.rst  tutorial-dev-kinto-admin.rst  tutorial-dev-server.rst  tutorial-local-server.rst  tutorial-multi-signoff.rst  tutorial-normandy-integration.rst  v2-notes.rst
docs/adr/: adr_001_behaviour_invalid_signature.md  adr_001_cache_bust.md  adr_001_replace_304_by_200.md  adr_002_cache_bust.md  adr_002_packaging_releasing_admin_UI.md  adr_003_bundling_collection_data.md  adr_004_server_side_filtering.md  adr_005_database_objects.md  adr_006_basic_key_agility.md  adr_007_broadast_debounce.md  adr_007_broadcast_debounce.md  adr_008_git-readers.md  adr_009_attachments_binary_diffs.md
docs/screencasts/: approve-review.vtt  approve-review.webm  fetch-local-settings.vtt  fetch-local-settings.webm  modify-request-review.vtt  modify-request-review.webm
git-reader/: Dockerfile  README.md  app.py  main.py  mimetypes.txt  pyproject.toml  run.sh
git-reader/tests/: test_api.py
kinto-remote-settings/: README.rst  pyproject.toml  setup.py
kinto-remote-settings/src/kinto_remote_settings/: __init__.py
kinto-remote-settings/src/kinto_remote_settings/changes/: __init__.py  utils.py  views.py
kinto-remote-settings/src/kinto_remote_settings/signer/: __init__.py  events.py  generate_keypair.py  listeners.py  serializer.py  updater.py  utils.py
kinto-remote-settings/src/kinto_remote_settings/signer/backends/: __init__.py  autograph.py  base.py  exceptions.py  local_ecdsa.py
kinto-remote-settings/src/kinto_remote_settings/testing/: mock_listener.py
kinto-remote-settings/tests/changes/: __init__.py  config.ini  test_broadcasts.py  test_changes.py  test_changeset.py  test_utils.py
kinto-remote-settings/tests/signer/: config.ini  ecdsa.private.pem  functional.py  support.py  test_autocreate_resources.py  test_events.py  test_generate_keypair.py  test_plugin_setup.py  test_signer.py  test_signer_attachments.py  test_signoff_flow.py  test_updater.py  test_utils.py
kinto-remote-settings/tests/signer/config/: autocreate.ini  bob.ecdsa.private.pem  ecdsa.public.pem  signer.ini
kinto-slack/: README.rst  pyproject.toml
kinto-slack/src/kinto_slack/: __init__.py
kinto-slack/tests/: test_kinto_slack.py
kinto_admin/: __init__.py  package.json
kinto_admin/src/: index.js
kinto_admin/static/: bundle.js  config.json  styles.css
kinto_admin/tests/: __init__.py  test_plugin_setup.py
kinto_remote_settings/: README.rst  __init__.py
kinto_remote_settings/changes/: __init__.py  views.py
kinto_remote_settings/changes/tests/: __init__.py  config.ini  test_changes.py  test_changeset.py  test_utils.py
kinto_remote_settings/signer/: __init__.py  generate_keypair.py  hasher.py  listeners.py  updater.py  utils.py
mail/: mailfileserver.py
requirements/: constraints.txt  default.txt  prod.txt
tests/: Dockerfile  amo-blocklist.yaml  browser_test.py  conftest.py  create_groups.py  e2e.py  integration_test.py  pytest.ini  requirements.txt  run.sh  smoke-test.sh  test_endpoints.py  test_integration.py  test_review.py  utils.py  validate_signature.py
tests/blocked/: blocklists.json
tests/cronjobs/: test_aws_lambda.py  test_backport_records.py  test_build_bundles.py  test_refresh_signature.py  test_sync_megaphone.py
tests/integration/: test_endpoints.py  utils.py
tests/plugins/: test_attachment.py  test_email.py  test_history.py  test_signer.py
(+24 files in other folders)
