[project]
name = "remote-settings"
version = "0"
description = "Easily manage evergreen settings data in Firefox"
authors = [{name = "Contactless", email = "postmaster@localhost"}]
license = {text = "MPL"}
readme = "README.rst"
requires-python = ">=3.14,<3.15"
dependencies = [
    "canonicaljson-rs==0.9.3",
    "cryptography<50",
    "ecdsa==0.19.2",
    "kinto[postgresql,memcached,monitoring]>=26.2.0,<27",
    "kinto-attachment>=9.0.1",
    "kinto-emailer>=4",
    "kinto-slack",
    "requests-hawk<2",
    "prometheus-client>=0.25.0",
    "granian>=2.7.9,<3.0.0",
]

[dependency-groups]
kinto-remote-settings = ["kinto-remote-settings"]
cronjobs = ["cronjobs"]
git-reader = ["git-reader"]
dev = [
    "pytest==9.1.1",
    "pytest-cov<8.0.0",
    "webtest==3.0.7",
    "coverage==7.14.3",
    "detect-secrets>=1.5.0",
    "ruff>=0.15.20",
    "responses>=0.26.1",
    "httpx>=0.28.1",
    "setuptools<82",
    "pytest-xdist>=3.8.0",
    "ty>=0.0.55",
]
docs = [
    "docutils==0.22.4",
    "sphinx==9.1.0",
]

[tool.uv.sources]
kinto-remote-settings = {path = "./kinto-remote-settings", editable = true}
kinto-slack = {path = "./kinto-slack", editable = true}
cronjobs = {path = "./cronjobs", editable = true}
git-reader = {path = "./git-reader", editable = true}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kinto-remote-settings"]

[tool.ruff]
extend-exclude = [
    "__pycache__",
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E", "W",
    # flake8
    "F",
    # isort
    "I",
    # pytest style
    "PT",
    # eradicate commented code
    "ERA",
    # ruff lint
    "RUF",
]
ignore = [
    # `format` will wrap lines.
    "E501",
]

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.ty.src]
exclude = ["**/tests"]

[tool.pytest.ini_options]
# https://docs.pytest.org/en/6.2.x/usage.html
# -ra: shows test summary for all EXCEPT passed and passed with output
# --showlocals: show local variables in tracebacks
# --tb=native: traceback printing with Python standard library formatting
addopts = "-ra --showlocals --tb=native -n auto --dist loadgroup"
sensitive_url = ".mozaws.net"
asyncio_mode = "strict"
pythonpath = ["git-reader", "cronjobs"]

[tool.coverage]
# https://github.com/nedbat/coveragepy
    [tool.coverage.run]
    parallel = true
    omit = [
        '*/setup.py',
        '*/.local/*',
        '/usr/*',
        '*/.venv/*',
        '*/.tox/*',
        '*/virtualenvs/*',
    ]

    [tool.coverage.report]
    exclude_lines = [
        "# noqa",
        "raise NotImplementedError",
        "pragma: no cover",
        "def __repr__",
        "if .debug:",
        "raise NotImplementedError",
        "if __name__ == .__main__.:",
        "logger.",
    ]

[tool.pytest_env]
SENTRY_DSN = "https://fake:secret@sentry.example.com/001" # pragma: allowlist secret

[tool.typos.default]
extend-ignore-re = [
    # Ignore blocks between `# spellchecker:off` and `# spellchecker:on`
    "(?s)(#|//)\\s*spellchecker:off.*?\\n\\s*(#|//)\\s*spellchecker:on",
]
