[tool.poetry]
name = "browser-tests"
version = "0"
description = "Browser tests"
authors = ["Contactless <postmaster@localhost>"]

[tool.poetry.dependencies]
python = ">=3.11, <3.14"
aiohttp = "3.11.12"
autograph-utils = "1.0.1"
canonicaljson-rs = "0.7.1"
httpie = "3.2.4"
kinto-http = "11.7.1"
pytest = "8.3.4"
webtest = "3.0.4"
playwright = "1.52.0"
pytest-playwright = "0.7.0"
