[project]
name = "browser-tests"
version = "0"
description = "Browser tests"
requires-python = ">=3.11,<3.15"
dependencies = [
    "aiohttp==3.13.4",
    "autograph-utils==1.0.1",
    "canonicaljson-rs==0.9.3",
    "httpie==3.2.4",
    "kinto-http==11.7.1",
    "pytest==8.3.4",
    "webtest==3.0.4",
    "playwright==1.52.0",
    "pytest-playwright==0.7.0",
    "pytest-timeout==2.4.0",
]
