[project]
name = "browser-tests"
version = "0"
description = "Browser tests"
requires-python = ">=3.11,<3.15"
dependencies = [
    "aiohttp==3.14.1",
    "autograph-utils==1.0.1",
    "canonicaljson-rs==0.9.3",
    "httpie==3.2.4",
    "kinto-http==11.11.0",
    "pytest==9.1.1",
    "webtest==3.0.7",
    "playwright==1.60.0",
    "pytest-playwright==0.8.0",
    "pytest-timeout==2.4.0",
]
