[tool.poetry]
name = "git-reader"
version = "0.1.0"
description = "Remote Settings core cronjobs"
authors = ["Contactless <postmaster@localhost>"]

[tool.poetry.dependencies]
python = ">=3.11, <3.15"
dockerflow = "^2024.4.2"
fastapi = "^0.120.2"
pydantic-settings = "^2.10.1"
pygit2 = "^1.18.2"
uvicorn = "^0.35.0"
uvloop = "^0.21.0"
pyjwt = "^2.10.1"

[tool.pytest.ini_options]
pythonpath = ["."]
