[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kinto_remote_settings"

# Load version dynamically from version.json
dynamic = ["version"]

dependencies = [
    "kinto",
    "canonicaljson-rs",
    "ecdsa",
    "requests_hawk",
]

[tool.setuptools]
packages = { find = { where = ["src"] } }

[tool.setuptools.dynamic]
version = { attr = "kinto_remote_settings.__version__" }

[tool.setuptools.package-data]
kinto_remote_settings = ["*.json"]

[tool.pytest.ini_options]
pythonpath = "src"
