[project]
name = "kinto-slack"
version = "0.0.0"
description = "Slack notifications plugin for Kinto"
requires-python = ">=3.12"
dependencies = [
    "kinto",
    "requests",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kinto_slack"]
